--- a/style.css
+++ b/style.css
@@ -1152,6 +1152,57 @@ section{
 .eco_inner_page_banner .eco_headings h3 b{
 	color:#fff;
 }
+.banner-slider .slick-prev.slick-arrow, 
+.banner-slider .slick-next.slick-arrow {
+  top: 48%;
+  bottom: auto;
+  outline: none;
+}
+.banner-slider .slick-prev.slick-arrow {
+  left: 10px;
+  right: auto;
+}
+.banner-slider .slick-next.slick-arrow {
+  right: 10px;
+  left: auto;
+}
+.slick-dots {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+}
+.slick-dots li {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 4px;
+}
+.slick-dots li button {
+  background: white;
+  border-radius: 50%;
+  text-indent: -9999px;
+  width: 15px;
+  height: 15px;
+  padding: 0;
+  outline: none;
+  position: relative;
+}
+.slick-dots li.slick-active {
+
+}
+.slick-dots li.slick-active button:before {
+  content: '';
+  background: #7abf18;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+}
 /*
 =============================================
 	Eco Banner ends
